--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.3"
   }
 }
