--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^3.1.1",
+    "@thirdweb-dev/sdk": "^3.1.1",
+    "ethers": "^5.7.1",
     "next": "12.3.1",
+    "notiflix": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
